Complete responsive blog.html. Bug in body overflow

--- a/css/blog.css
+++ b/css/blog.css
@@ -46,7 +46,7 @@
             justify-content: space-between;
     font-size: 20px;
     padding: 15px;
-    
+    padding-right: 0;
     -ms-flex-item-align: start;
     
         align-self: flex-start;
@@ -111,9 +111,10 @@
     background-color: transparent;
     color: white;
     border: 1px solid white;
-    padding: 10px;
-    padding-right: 15px;
-    padding-right: 15px;
+        padding-left: 15px;
+        padding-right: 15px;
+    padding-bottom: 2%;
+    padding-top: 2px;
     cursor: pointer;
     font-weight: bold;
     font-size: 15px;
@@ -160,6 +161,8 @@
     
     padding: 13px;
     width: 30%;
+    padding-left: 0;
+    padding-right: 0;
 }
 
 .article-heading{
@@ -202,6 +205,15 @@
     }
 }
 
+@media screen and (max-width: 480px){
+    .hero-topheadings{
+        display: block;
+        margin-right: 0;
+        text-align: center;
+        margin-left: 0;
+        padding-left: 10px;
+    }
+}
 
 
 
